--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /var/app/
+    destination: ~/app/
 hooks:
   BeforeInstall:
     - location: scripts/npm-install.sh
