--- a/appspec.yml
+++ b/appspec.yml
@@ -4,7 +4,7 @@ files:
   - source: /
     destination: ~/app/
 hooks:
-  BeforeInstall:
+  AfterInstall:
     - location: scripts/npm-install.sh
       runas: root
       timeout: 300
