--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,4 +24,8 @@ workflows:
     build:
       jobs:
         - build
-        - push-to-ecr
+        - aws-ecr/build_and_push_image:
+          account-url: AWS_ECR_URL
+          aws-access-key-id: AWS_ACCESS_KEY
+          aws-secret-access-key: AWS_SECRET_KEY
+          tag: "${AWS_ECR_URL}:latest"
