--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ workflows:
       jobs:
         - build
         - aws-ecr/build_and_push_image:
-          account-url: AWS_ECR_URL
-          aws-access-key-id: AWS_ACCESS_KEY
-          aws-secret-access-key: AWS_SECRET_KEY
+          account-url: $AWS_ECR_URL
+          aws-access-key-id: $AWS_ACCESS_KEY
+          aws-secret-access-key: $AWS_SECRET_KEY
           tag: "${AWS_ECR_URL}:latest"
