--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,20 +12,17 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
-  push-to-ecr:
-    - aws-ecr/build_and_push_image:
-       account-url: AWS_ECR_URL
-       aws-access-key-id: AWS_ACCESS_KEY
-       aws-secret-access-key: AWS_SECRET_KEY
-      tag: "${AWS_ECR_URL}:latest"
 
   
 workflows:
-    build:
-      jobs:
-        - build
-        - aws-ecr/build_and_push_image:
-          account-url: $AWS_ECR_URL
-          aws-access-key-id: $AWS_ACCESS_KEY
-          aws-secret-access-key: $AWS_SECRET_KEY
+  build:
+    jobs:
+      - build
+  deploy:
+    jobs:
+      - aws-ecr/build-and-push-image:
+          account-url: AWS_ECR_URL
+          aws-access-key-id: AWS_ACCESS_KEY
+          aws-secret-access-key: AWS_SECRET_KEY
+          repo: AWS_REPO_NAME
           tag: "${AWS_ECR_URL}:latest"
