add required job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,8 @@ workflows:
   deploy:
     jobs:
       - aws-ecr/build-and-push-image:
+          requires:
+            - build
           account-url: AWS_ECR_URL
           aws-access-key-id: AWS_ACCESS_KEY
           aws-secret-access-key: AWS_SECRET_KEY
