--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,17 +3,39 @@ orbs:
   aws-ecr: circleci/aws-ecr@6.8.2
   aws-ecs: circleci/aws-ecs@01.1.0
 
-workflows:
-  build-and-deploy:
-    jobs:
+jobs:
+  build-and-push-app-image:
+    executor: aws-ecr/default
+    steps:
       - aws-ecr/build-and-push-image:
-          account-url: AWS_ECR_URL
+          account-url: AWS_ECR_URL # this should be the name minus the "/repo name"
           repo: "${AWS_REPO_NAME}"
           tag: "latest"
-      - aws-ecs/deploy-service-update:
-          requires:
-            - aws-ecr/build-and-push-image
+          path: "./app/"
+  
+  build-and-push-nginx-image:
+    executor: aws-ecr/default
+    steps:
+      - aws-ecr/build-and-push-image:
+          account-url: AWS_NGINX_ECR_URL # this should be the name minus the "/repo name"
+          repo: "${AWS_NGINX_REPO_NAME}"
+          tag: "latest"
+          path: "./nginx/"
+
+  deploy-app:
+    docker:
+      - image: circleci/python:3.7.1
+    steps:
+      - aws-ecs/update-service:
           family: "${TASK_DEFINITION_FAMILY}"
           cluster-name: "${CLUSTER_NAME}"
           force-new-deployment: true
           service-name: "${SERVICE_NAME}"
+
+workflows:
+  build-and-deploy:
+    jobs:
+      - build-app-image
+      - deploy-app:
+          requires:
+            - build-app-image
