--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,10 @@ jobs:
     docker:
       - image: circleci/python:3.7.1
     steps:
+      - aws-cli/install
+      - aws-cli/configure:
+          aws-access-key-id: $AWS_ACCESS_KEY_ID
+          aws-region: $AWS_REGION
       - aws-ecs/update-service:
           family: "${TASK_DEFINITION_FAMILY}"
           cluster-name: "${CLUSTER_NAME}"
