--- a/terraform/awsECS/modules/app/templates/app.template.json
+++ b/terraform/awsECS/modules/app/templates/app.template.json
@@ -1,4 +1,21 @@
 [
+  {
+    "essential": true,
+    "memory": 256,
+    "name": "app",
+    "cpu": 256,
+    "image": "${REPOSITORY_URL}:latest",
+    "workingDirectory": "/usr/app",
+    "command": [
+      "npm",
+      "start"
+    ],
+    "portMappings": [
+      {
+        "containerPort": 3000
+      }
+    ]
+  },
     {
       "essential": true,
       "memory": 256,
@@ -12,24 +29,7 @@
         }
       ],
       "links": [
-        "${APP_NAME}"
-      ]
-    },
-    {
-      "essential": true,
-      "memory": 256,
-      "name": "${APP_NAME}",
-      "cpu": 256,
-      "image": "${REPOSITORY_URL}:latest",
-      "workingDirectory": "/usr/app",
-      "command": [
-        "npm",
-        "start"
-      ],
-      "portMappings": [
-        {
-          "containerPort": 3000
-        }
+        "app"
       ]
     }
   ]
